# codecrafters-sqlite-rust

./: .gitignore  AGENTS.md  Cargo.toml  README.md  lefthook.yml
src/: command.rs  index.rs  main.rs  pager.rs  parser.rs  schema.rs  sql.rs  table.rs  utils.rs
